<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="added_favorite">Added to Favorites</string>
    <string name="app_name">TRScanner</string>
    <string name="cancel">Cancel</string>
    <string name="category_all">All</string>
    <string name="category_apk">APKs</string>
    <string name="category_document">Docs</string>
    <string name="category_favorite">Favorites</string>
    <string name="category_music">Music</string>
    <string name="category_camera">scan</string>
        <string name="category_time_picker">time picker</string>
    <string name="category_other">Misc</string>
    <string name="category_picture">Pics</string>
    <string name="category_calendar">Calendar</string>
    <string name="category_theme">Themes</string>
    <string name="category_video">Videos</string>
    <string name="category_zip">Zips</string>
    <string name="confirm">OK</string>
    <string name="confirm_know">OK</string>
    <string name="enable_sd_card">SD card is not available, please connect one</string>
    <string name="error_info_cant_send_folder">Unable to send the folder</string>
    <string name="fail_to_create_folder">Failed to create the folder, the folder already exists</string>
    <string name="fail_to_rename">Failed to rename the file or folder as it already exists</string>
    <string name="file_info_canread">Readable:</string>
    <string name="file_info_canwrite">Writable:</string>
    <string name="file_info_ishidden">Hidden:</string>
    <string name="file_info_location">Path:</string>
    <string name="file_info_modified">Modified:</string>
    <string name="file_info_size">Size:</string>
    <string name="file_size">%d Bytes</string>
    <string name="install_failed">Installation failed</string>
    <string name="install_successful">Installation successful</string>
    <string name="instruction">Enter the following address into your FTP Client:</string>
    <string name="instruction_pre">Start service to enable FTP server</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_sort">Sort by</string>
    <string name="menu_item_sort_date">Date</string>
    <string name="menu_item_sort_name">Name</string>
    <string name="menu_item_sort_size">Size</string>
    <string name="menu_item_sort_type">Type</string>
    <string name="new_folder_name">New folder</string>
    <string name="no">No</string>
    <string name="no_file">No files</string>
    <string name="no_wifi">No Wi-Fi network</string>
    <string name="no_wifi_hint">No Wi-Fi network, press to check WiFi settings</string>
    <string name="notif_server_starting">FTP Server started</string>
    <string name="notif_title">FTP Server</string>
    <string name="operation_cancel">Cancel</string>
    <string name="operation_search">Search</string>
    <string name="operation_cancel_selectall">Deselect All</string>
    <string name="operation_copy">Copy</string>
    <string name="operation_copy_path">Copy file path</string>
    <string name="operation_create_folder">New folder</string>
    <string name="operation_create_folder_message">Enter folder name</string>
    <string name="operation_delete">Delete</string>
    <string name="operation_delete_confirm_message">Confirm Deletion?</string>
    <string name="operation_deleting">Deleting...</string>
    <string name="operation_profile">Profile</string>
    <string name="operation_favorite">Add to Favorites</string>
    <string name="operation_hide_sys">Hide hidden files</string>
    <string name="operation_info">Details</string>
    <string name="operation_move">Move</string>
    <string name="operation_moving">Moving...</string>
    <string name="operation_paste">Paste</string>
    <string name="operation_pasting">Pasting...</string>
    <string name="operation_refresh">Refresh</string>
    <string name="operation_rename">Rename</string>
    <string name="operation_rename_message">Enter a new name</string>
    <string name="operation_selectall">Select All</string>
    <string name="operation_send">Send</string>
    <string name="operation_show_sys">Show hidden files</string>
    <string name="operation_unfavorite">Remove from Favorites</string>
    <string name="removed_favorite">Removed from Favorites</string>
    <string name="sd_card_available">Space available:<xliff:g id="available_size">%1$s</xliff:g></string>
    <string name="sd_card_size">SD card:<xliff:g id="total_size">%1$s</xliff:g></string>
    <string name="sd_folder">SD card</string>
    <string name="search_hint">Search Files</string>
    <string name="search_title">Search Files</string>
    <string name="start_server">Start Service</string>
    <string name="stop_server">Stop Service</string>
    <string name="storage_warning">External storage is not available or cannot be read</string>
    <string name="tab_category">SCAN</string>
    <string name="tab_user">User</string>
    <string name="tab_doc">Document</string>
    <string name="wifi_state">WLAN Status</string>
    <string name="yes">Yes</string>
    <string name="dialog_select_type">Select file type</string>
    <string name="dialog_type_text">Text</string>
    <string name="dialog_type_audio">Audio</string>
    <string name="dialog_type_video">Video</string>
    <string name="dialog_type_image">Image</string>
    <string name="favorite_photo">Photo</string>
    <string name="favorite_sdcard">SD Card</string>
    <string name="favourite_root">Root</string>
<string name="favorite_screen_cap">MIUI Screen Shot</string>
    <string name="favorite_ringtone">Ringtone</string>
    <string name="multi_select_title">Selected <xliff:g id="number">%1$s</xliff:g> item(s)</string>
    <string name="menu_setting">Preferences</string>
    <string name="menu_exit">Exit</string>
    <string name="preference_title">General Settings</string>
	<string name="popup_menu_delete">popup_menu_delete</string>
	<string name="popup_menu_rotate">popup_menu_rotate</string>
	<string name="popup_menu_exit">popup_menu_exit</string>
	<string name="checkable">checkable</string>
    <string name="pref_primary_folder">Home folder</string>
    <string name="pref_read_root">Read root</string>
    <string name="pref_show_real_path">Display real path</string>
    <string name="default_primary_folder">/mnt/sdcard</string>
    <string name="pref_primary_folder_summary">The folder that appears when the app starts, and current value is <xliff:g id="string">%1$s</xliff:g></string>
    <string name="pref_show_real_path_summary">Show real path in navigation bar</string>
    <string name="trtech">TRScanner is provided by TRTech</string>
    <string name="user_logout">Logout</string>
    <string name="user_exit">Exit</string>
    <string name="journal_enter_dialog">please enter <font fgcolor="#ffff4c25">(Max:256 words)</font></string>
    <string name="journal_enter_button">create</string>
    <string name="journal_delete_button">delete</string>
    <string name="journal_file_delete">deleted</string>
    <string name="login_dialog_account">account:</string>
    <string name="login_dialog_account_hint">account/e-mail</string>
    <string name="login_dialog_password">password:</string>
    <string name="login_dialog_password_hint">input password</string>
    <string name="login_dialog_reg">register account</string>
    <string name="login_dialog_login">login</string>
    <string name="login_dialog_cancel">cancel</string>
    <string name="msg_login_success">Login Success</string>
    <string name="msg_login_fail">Login Failure</string>
    <string name="msg_login_email_null">please enter email</string>
    <string name="msg_login_pwd_null">please enter password</string>
    <string name="msg_login_error">account or password is wrong</string>
    <string name="login_rememberme">remember me</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_server">Web Server</string>
    <string name="turn_on_server">Turn on Server</string>
    <string name="turn_off_server">Turn off Server</string>
    <string name="server_off">Web server is off</string>
    <string name="server_on">Web server is on: Access the url below or click the internet symbol</string>
    <string name="server_suspend">Web server is suspend</string>
    <string name="storage_off">Attention,the storage device is not available</string>
    <string name="wifi_off">Network is not available</string>
    <string name="web_file_extract">Installing WebPages...</string>
    <string name="notification_title">Web server is running</string>
    <string name="notification_content">Server address：%s</string>
    <string name="server_settings">Server settings</string>
    <string name="server_port">Server Port</string>
    <string name="server_port_summary">Server port is %d</string>
    <string name="server_password">Server Password</string>
    <string name="server_password_summary">Server password is %s</string>
    <string name="server_port_dialog_title">Input the server port</string>
    <string name="server_port_invalid">Port number must be between 1024 and 65535</string>
    <string name="server_port_occupied">Port %d is occupied by others, please set new port in settings menu.</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="quit">quit</string>
    <string name="about0">TRScanner</string>
    <string name="about1">If you don\'t understand how to use it, the google page of the project contains a FAQ. </string>
    <string name="about2">Don\'t forget to rate the app, it\'s really important</string>
    <string name="about3">Please give us a like on Facebook</string>
    <string name="about4">Thank you</string>
    <string name="wifi_password">wifi_password</string>
    <string name="trtech_bio">As an innovation performer, TRTech fast tracks innovation to market by working with its ninety-nine industry, government, and academic partners and clients to invent, modify, and/or prototype market-driven technology. TRTech research activity focuses on three themes: Wireless; ICT Security; Data Analytics and Emerging Sectors. Labs in Edmonton, Calgary, Saskatoon, Regina, and Winnipeg employ 250 people. The TRTech consortium has grown to become the largest not-for-profit applied research consortium in Canada, and one of the most industry-invested R and D vehicles in Canada – at around fifty per cent. TRTech offers three types of services</string>
    <string name="trtech_claim">TRTech All rights reserved 2015</string>
    <string name="load_ing">loading...</string>
    <string name="title_logo">NATIONAL GEOGRAPHIC</string>
    <string name="btn_skip_intro">Skip Intro</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="pull_to_refresh_pull_label">pull to refresh</string>
    <string name="pull_to_refresh_release_label">release to refresh</string>
    <string name="pull_to_refresh_refreshing_label">updating ...</string>
    <string name="patient_name">name</string>
    <string name="user_address">address</string>
    <string name="user_city">city</string>
    <string name="user_province">province</string>
    <string name="user_country">country</string>
    <string name="user_phone">phone</string>
    <string name="user_age">age</string>
    <string name="user_gender">gender</string>
    <string name="user_id">uid</string>
    <string name="user_email">email</string>
    <string name="user_LatestLogin">latest login</string>
    <string name="qa_user">user</string>
    <string name="qa_logout">logout</string>
    <string name="img_from_album">album</string>
    <string name="feedback_title">feedback</string>
    <string name="feedback_content">Thank you for your feedback to TRScanner</string>
    <string name="feedback_hints">please enter your comments and suggestions</string>
    <string name="feedback_submit">submit</string>
</resources>