<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <ScrollView
        android:id="@+id/feedback_scrollview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="14.0dip"
        android:paddingLeft="14.0dip"
        android:paddingRight="14.0dip"
        android:scrollbars="none" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:orientation="vertical"
            android:background="@drawable/rounded_corner"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dip"
                android:textSize="@dimen/text_size_18"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/feedback_title" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/black"
                android:text="@string/feedback_content" />
            <EditText
                android:id="@+id/feedback_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:textSize="@dimen/text_size_13"
                android:lines="4"
                android:autoLink="web|email"
                android:gravity="top"
                android:hint="@string/feedback_hints"/>
            <Button
                android:id="@+id/feedback_publish"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_marginTop="15dip"
                android:layout_marginBottom="30dip"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/login_btn_selector"
                android:textSize="@dimen/text_size_18"
                android:text="@string/feedback_submit"/>
        </LinearLayout>
    </ScrollView>
    <ImageButton
        android:id="@+id/feedback_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/feedback_scrollview"
        android:layout_alignTop="@+id/feedback_scrollview"
        android:background="@drawable/login_close_button"  />
</RelativeLayout>